[project]
name = "rbga"
version = "0.1.0"
description = "RMIT Board Game Association services — key tracker, board-game inventory, anonymous complaints, and a Discord bot."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "discord.py>=2.3",
]

[project.optional-dependencies]
# Dev/test extras: `pip install -e ".[dev]"`. httpx backs FastAPI's TestClient.
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rbga*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
